--- a/projects/01_fyyur/starter_code/templates/pages/home.html
+++ b/projects/01_fyyur/starter_code/templates/pages/home.html
@@ -7,11 +7,11 @@
 		<p class="lead">Where musical artists meet musical venues.</p>
 		<h3>
 			<a href="/venues"><button class="btn btn-primary btn-lg">Find a venue</button></a>
-			<a href="/venues/create"><button class="btn btn-default btn-lg">Post a venue</button></a>
+			<a href="/venues/create"><button class="btn btn-default btn-lg" data-testid="post-venue">Post a venue</button></a>
 		</h3>
 		<h3>
 			<a href="/artists"><button class="btn btn-primary btn-lg">Find an artist</button></a>
-			<a href="/artists/create"><button class="btn btn-default btn-lg">Post an artist</button></a>
+			<a href="/artists/create"><button class="btn btn-default btn-lg" data-testid="post-artist">Post an artist</button></a>
 		</h3>
 		<p class="lead">Publicize about your show for free.</p>
 		<h3>
