--- a/projects/01_fyyur/starter_code/templates/forms/new_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_artist.html
@@ -52,7 +52,7 @@
               <label for="seeking_description">Seeking Description</label>
               {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
             </div>
-      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block" data-testid="post-artist">
     </form>
   </div>
 {% endblock %}
