--- a/projects/01_fyyur/starter_code/templates/pages/show_artist.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_artist.html
@@ -73,6 +73,14 @@
 </section>
 
 <a href="/artists/{{ artist.id }}/edit"><button class="btn btn-primary btn-lg" data-testid="edit-artist-button">Edit</button></a>
+<form>
+	<input type="submit"
+		   value="Delete"
+		   class="btn btn-primary btn-lg"
+		   data-testid="delete-artist-button"
+		   formmethod="POST"
+		   formaction="{{ url_for('delete_artist', artist_id=artist.id) }}">
+</form>
 
 {% endblock %}
 
