--- a/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
@@ -57,7 +57,7 @@
             {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
           </div>
       
-      <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block" data-testid="post-edited-venue">
     </form>
   </div>
 {% endblock %}
